Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <a class="topmenu" href="#certifications">Certifications</a>
       <a class="topmenu" href="#projects">Projects</a>
       <a class="topmenu" href="#recommendations">Recommendations</a>
+      <a class="topmenu" href="#contact-me">Contact</a>
     </div>
   </div>
 </nav>
@@ -59,7 +60,7 @@
           <img src="images/waving-hand.png" width="60px" alt="Waving Hand" />
         </h1>
         <p>
-          I am a Computer Engineering student at NYU Abu Dhabi, passionate about Quantum Computing, AI/ML, 
+          I am a Computer Engineering student at NYU Abu Dhabi with a <strong>GPA of 4.0</strong>, passionate about Quantum Computing, AI/ML, 
           Computer Vision, and Sustainable Technologies. I have a diverse skill set ranging from web 
           development to mathematical modeling. I have developed various projects using Python, C++, and C#,
            with deployment on platforms like IBM Cloud. I actively engage in research that integrates 
@@ -404,6 +405,41 @@
         </fieldset>
       </div>
     </section>
+
+    <!-- Contact Me Section -->
+  <section id="contact-me">
+    <h2>Contact Me</h2>
+    <form class="contact-form" action="#" method="post">
+      <label for="user_name">Name</label>
+      <input 
+        type="text"
+        id="user_name"
+        name="user_name"
+        placeholder="Your Name"
+        required
+      />
+
+      <label for="user_email">Email</label>
+      <input 
+        type="email"
+        id="user_email"
+        name="user_email"
+        placeholder="Your Email"
+        required
+      />
+
+      <label for="user_message">Message</label>
+      <textarea
+        id="user_message"
+        name="user_message"
+        placeholder="Write your message here..."
+        rows="6"
+        required
+      ></textarea>
+
+      <button type="submit">Submit</button>
+    </form>
+  </section>
 
     <!-- Scroll-to-Top Icon -->
     <div class="iconbutton">
