--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Aman Sunesh - Portfolio</title>
-    <link rel="stylesheet" href="./style.css" />
-    <script src="./script.js"></script>
-  </head>
-  <body>
+<head>
+  <title>Aman Sunesh - Portfolio</title>
+  <link rel="stylesheet" href="./style.css" />
+  
+  <!-- Include EmailJS SDK -->
+  <script type="text/javascript" src="https://cdn.emailjs.com/sdk/3.2.0/email.min.js"></script>
+  <script type="text/javascript">
+    (function(){
+      emailjs.init("Qg2fU0vZ-xiv09L-Q"); 
+    })();
+  </script>
+  
+  <script src="./script.js" defer></script>
+</head>
+
+<body>
 
 <!-- Navigation Bar -->
 <nav id = "home">
@@ -407,39 +416,41 @@
     </section>
 
     <!-- Contact Me Section -->
-  <section id="contact-me">
-    <h2>Contact Me</h2>
-    <form class="contact-form" action="#" method="post">
-      <label for="user_name">Name</label>
-      <input 
-        type="text"
-        id="user_name"
-        name="user_name"
-        placeholder="Your Name"
-        required
-      />
+    <section id="contact-me">
+      <h2>Contact Me</h2>
+      <form class="contact-form" id="contact-form">
+        <label for="user_name">Name</label>
+        <input 
+          type="text"
+          id="user_name"
+          name="user_name"
+          placeholder="Your Name"
+          required
+        />
 
-      <label for="user_email">Email</label>
-      <input 
-        type="email"
-        id="user_email"
-        name="user_email"
-        placeholder="Your Email"
-        required
-      />
+        <label for="user_email">Email</label>
+        <input 
+          type="email"
+          id="user_email"
+          name="user_email"
+          placeholder="Your Email"
+          required
+        />
 
-      <label for="user_message">Message</label>
-      <textarea
-        id="user_message"
-        name="user_message"
-        placeholder="Write your message here..."
-        rows="6"
-        required
-      ></textarea>
+        <label for="user_message">Message</label>
+        <textarea
+          id="user_message"
+          name="user_message"
+          placeholder="Write your message here..."
+          rows="6"
+          required
+        ></textarea>
 
-      <button type="submit">Submit</button>
-    </form>
-  </section>
+        <button type="submit">Submit</button>
+      </form>
+    </section>
+
+
 
     <!-- Scroll-to-Top Icon -->
     <div class="iconbutton">
