Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
 <title>Aman Sunesh • Portfolio</title>
 <meta name="description" content="Aman Sunesh — Computer Engineering @ NYU Abu Dhabi. I build quantum sensing systems, ML pipelines, and end-to-end scientific tools that work.">
 <meta name="theme-color" content="#6a11cb">
+<link rel="canonical" href="https://aman-sunesh.github.io/">
+
+<meta property="og:title" content="Aman Sunesh — Portfolio">
+<meta property="og:description" content="Computer Engineering @ NYU Abu Dhabi. Quantum sensing, ML pipelines, and end-to-end scientific tools.">
+<meta property="og:url" content="https://aman-sunesh.github.io/">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://aman-sunesh.github.io/images/profile.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Aman Sunesh",
+  "url": "https://aman-sunesh.github.io/",
+  "image": "https://aman-sunesh.github.io/images/profile.jpg",
+  "jobTitle": "Computer Engineering Student",
+  "affiliation": { "@type": "CollegeOrUniversity", "name": "NYU Abu Dhabi" },
+  "sameAs": [
+    "https://github.com/Aman-Sunesh",
+    "https://www.linkedin.com/in/aman-sunesh"
+  ]
+}
+</script>
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
