Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <main id="home">
   <section class="hero container">
     <div class="hero-text">
-      <h1>Designing intelligent systems — from quantum sensors to machine learning pipelines</h1>
+      <h1><span class="visually-hidden">Aman Sunesh — </span>Designing intelligent systems — from quantum sensors to machine learning pipelines</h1>
       <p>I'm a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of quantum technology and AI. My work spans quantum sensing platforms using NV centers and pulse-timed optics, full-stack pharmacokinetic simulation apps, and machine learning pipelines for medical imaging and vision tasks. I care about reproducibility, hardware–software synergy, and results that ship.</p>
       <div class="cta">
         <a
