Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 <meta property="og:image" content="https://aman-sunesh.github.io/images/profile.jpg">
 <meta name="twitter:card" content="summary_large_image">
 
+<meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+<meta name="author" content="Aman Sunesh">
+<meta property="og:site_name" content="Aman Sunesh">
+<link rel="icon" href="/images/favicon.ico">
+<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
