--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 }
 </script>
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="/style.css?v=2">
 <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
 <script>
   emailjs.init({
@@ -92,7 +92,11 @@
       </div>
     </div>
     <div class="hero-media">
-      <img src="images/profile.jpg" alt="Portrait of Aman Sunesh" class="portrait">
+      <img src="/images/profile.jpg"
+          alt="Portrait of Aman Sunesh"
+          class="portrait"
+          fetchpriority="high"
+          decoding="async">
     </div>
   </section>
 
