Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
         <div class="role-dates">Aug 2024 – May 2025</div>
       </header>
       <p>Led 15+ cross-department projects improving water access, Wi-Fi, laundry, and sustainability with feedback-driven systems.</p>
+      <div class="tags"><span>Leadership</span><span>Project Management</span><span>Sustainability</span><span>Stakeholder Coordination</span></div>
     </article>
 
     <details class="more-roles">
