Initial commit of all project files

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
       <div class="tags"><span>OpenStreetMap</span><span>QGIS</span><span>Field Work</span></div>
     </article>
 
-    <article class="card role secondary">
+    <article class="card role">
       <header class="role-head">
         <h3>Campus Spaces Committee Chair, Student Government</h3>
         <div class="role-sub">NYU Abu Dhabi • Abu Dhabi, UAE</div>
