Refactor HTML meta tags and improve SEO

--- a/index.html
+++ b/index.html
@@ -1,53 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Aman Sunesh • Portfolio</title>
-<meta name="description" content="Aman Sunesh — Computer Engineering @ NYU Abu Dhabi. I build quantum sensing systems, ML pipelines, and end-to-end scientific tools that work.">
-<meta name="theme-color" content="#6a11cb">
-<link rel="canonical" href="https://aman-sunesh.github.io/">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<meta property="og:title" content="Aman Sunesh — Portfolio">
-<meta property="og:description" content="Computer Engineering @ NYU Abu Dhabi. Quantum sensing, ML pipelines, and end-to-end scientific tools.">
-<meta property="og:url" content="https://aman-sunesh.github.io/">
-<meta property="og:type" content="website">
-<meta property="og:image" content="https://aman-sunesh.github.io/images/profile.jpg">
-<meta name="twitter:card" content="summary_large_image">
+  <title>Aman Sunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
 
-<meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
-<meta name="author" content="Aman Sunesh">
-<meta property="og:site_name" content="Aman Sunesh">
-<link rel="icon" href="/images/favicon.ico">
-<link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+  <meta name="description" content="Aman Sunesh — Computer Engineering @ NYU Abu Dhabi. Projects in quantum sensing (NV centers), AI/ML, and full-stack scientific tools. GitHub: github.com/Aman-Sunesh">
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Aman Sunesh",
-  "url": "https://aman-sunesh.github.io/",
-  "image": "https://aman-sunesh.github.io/images/profile.jpg",
-  "jobTitle": "Computer Engineering Student",
-  "affiliation": { "@type": "CollegeOrUniversity", "name": "NYU Abu Dhabi" },
-  "sameAs": [
-    "https://github.com/Aman-Sunesh",
-    "https://www.linkedin.com/in/aman-sunesh"
-  ]
-}
-</script>
-<link rel="sitemap" type="application/xml" href="/sitemap.xml">
-<link rel="preconnect" href="https://cdn.jsdelivr.net">
-<link rel="stylesheet" href="/style.css?v=2">
-<script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
-<script>
-  emailjs.init({
-    publicKey: "Qg2fU0vZ-xiv09L-Q",
-    blockHeadless: true,
-    limitRate: { id: "portfolio-contact", throttle: 8000 }
-  });
-</script>
-<script src="script.js" defer></script>
+  <meta name="theme-color" content="#6a11cb">
+  <link rel="canonical" href="https://aman-sunesh.github.io/">
+
+  <link rel="me" href="https://github.com/Aman-Sunesh">
+  <link rel="me" href="https://www.linkedin.com/in/aman-sunesh/">
+  <link rel="me" href="https://www.youtube.com/@AmanSunesh">
+  <link rel="me" href="https://www.kaggle.com/amansunesh/">
+
+  <meta property="og:title" content="Aman Sunesh — Portfolio">
+  <meta property="og:description" content="Computer Engineering @ NYU Abu Dhabi. Quantum sensing, ML pipelines, and end-to-end scientific tools.">
+  <meta property="og:url" content="https://aman-sunesh.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://aman-sunesh.github.io/images/profile.jpg">
+  <meta property="og:image:alt" content="Portrait of Aman Sunesh">
+  <meta property="og:site_name" content="Aman Sunesh">
+  <meta property="og:locale" content="en_US">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1">
+  <meta name="author" content="Aman Sunesh">
+
+  <link rel="icon" href="/images/favicon.ico">
+  <link rel="apple-touch-icon" href="/images/apple-touch-icon.png">
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Aman Sunesh",
+    "url": "https://aman-sunesh.github.io/",
+    "image": "https://aman-sunesh.github.io/images/profile.jpg",
+    "jobTitle": "Computer Engineering Student",
+    "affiliation": { "@type": "CollegeOrUniversity", "name": "NYU Abu Dhabi" },
+    "email": "mailto:as18181@nyu.edu",
+    "sameAs": [
+      "https://github.com/Aman-Sunesh",
+      "https://www.linkedin.com/in/aman-sunesh/",
+      "https://www.kaggle.com/amansunesh/",
+      "https://x.com/AmanSunesh"
+    ]
+  }
+  </script>
+
+  <!-- Existing assets -->
+  <link rel="sitemap" type="application/xml" href="/sitemap.xml">
+  <link rel="preconnect" href="https://cdn.jsdelivr.net">
+  <link rel="stylesheet" href="/style.css?v=2">
+
+  <!-- EmailJS & site scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script>
+    emailjs.init({
+      publicKey: "Qg2fU0vZ-xiv09L-Q",
+      blockHeadless: true,
+      limitRate: { id: "portfolio-contact", throttle: 8000 }
+    });
+  </script>
+  <script src="script.js" defer></script>
 </head>
 <body>
 <header class="site-header">
