Initial Commit of all Files

--- a/index.html
+++ b/index.html
@@ -168,6 +168,19 @@
           <span class="chip">Cadence</span>
           <span class="chip">Unity</span>
         </div>
+
+        <h3 class="subheading">Fabrication & Measurement</h3>
+        <div class="chips">
+          <span class="chip">Photolithography (lift-off / wet etch)</span>
+          <span class="chip">Thin-film Deposition (sputter: Al, Pt)</span>
+          <span class="chip">Film Metrology (step-height, microscopy)</span>
+          <span class="chip">Device Patterning (Hall bars, test wires)</span>
+          <span class="chip">Optical Setup & Alignment (beam/polarization)</span>
+          <span class="chip">Timing & Instrumentation (DAQ, pulse control)</span>
+          <span class="chip">Cryogenic Measurements (~4 K, 4-probe)</span>
+          <span class="chip">Data Analysis & Reporting (Python)</span>
+        </div>
+
         <h3 class="subheading">Spoken</h3>
         <div class="chips">
           <span class="chip">English</span>
@@ -184,19 +197,16 @@
 
     <article class="card role">
       <header class="role-head">
-        <h3>Student Research Assistant, Center for Quantum & Topological Systems (CQTS)</h3>
-        <div class="role-sub">NYU Abu Dhabi • Abu Dhabi, UAE</div>
-        <div class="role-dates">Sep 2024 – Present</div>
+        <h3>Research Assistant, Shabani Lab</h3>
+        <div class="role-sub">New York University • New York, USA</div>
+        <div class="role-dates">Sep 2025 – Present</div>
       </header>
-      <p>Engineered a full-stack NV-center quantum diamond spectrometer for sensing.</p>
       <ul class="bullets tight">
-        <li>Executed precision optical alignment (beam focusing, AOM diffraction, polarization control).</li>
-        <li>Synchronized RF/MW pulse sequences with NI-DAQ via PulseBlaster timing; implemented APD-based photon detection.</li>
-        <li>Built a PyQt6 GUI around QuPyt for code-free execution: automated YAML/pulse-sequence generation, live ODMR fitting, nanosecond-level hardware sync, and intuitive experiment setup.</li>
-        <li>Delivered a technical presentation to Mubadala UAE on integrating NV-based sensing for MRI enhancement (hardware-software workflow and experimental challenges).</li>
-        <li>Presented at NYUAD Summer Symposium 2025; awarded 1st Place for Best Poster.</li>
+        <li>Pattern Al/Pt thin-film bilayers into Hall bars and 4-probe test wires using photolithography (wet etch or lift-off).</li>
+        <li>Sputter aluminum and platinum with controlled thickness; verify film quality and uniformity.</li>
+        <li>Perform AHU hardening steps to stabilize resist profiles before etch or deposition.</li>
       </ul>
-      <div class="tags"><span>Python</span><span>PyQt6</span><span>QuPyt</span><span>DAQ</span></div>
+      <div class="tags"><span>Lithography</span><span>Device Fabrication</span><span>Sputter Deposition</span><span>Thin-Film Characterization</span><span>Experimental Design</span><span>Data Analysis</span></div>
     </article>
 
     <article class="card role">
@@ -213,6 +223,23 @@
         <li>Designed PD coupling that consumes PK C(t) and returns effect-time series, including antibiotic kill dynamics (Emax/Hill) and EV→PMM2 activity mapping.</li>
       </ul>
       <div class="tags"><span>React</span><span>FastAPI</span><span>SciPy</span><span>PK/PD</span></div>
+    </article>
+
+    <article class="card role">
+      <header class="role-head">
+        <h3>Student Research Assistant, Center for Quantum & Topological Systems (CQTS)</h3>
+        <div class="role-sub">NYU Abu Dhabi • Abu Dhabi, UAE</div>
+        <div class="role-dates">Sep 2024 – Sep 2025</div>
+      </header>
+      <p>Engineered a full-stack NV-center quantum diamond spectrometer for sensing.</p>
+      <ul class="bullets tight">
+        <li>Executed precision optical alignment (beam focusing, AOM diffraction, polarization control).</li>
+        <li>Synchronized RF/MW pulse sequences with NI-DAQ via PulseBlaster timing; implemented APD-based photon detection.</li>
+        <li>Built a PyQt6 GUI around QuPyt for code-free execution: automated YAML/pulse-sequence generation, live ODMR fitting, nanosecond-level hardware sync, and intuitive experiment setup.</li>
+        <li>Delivered a technical presentation to Mubadala UAE on integrating NV-based sensing for MRI enhancement (hardware-software workflow and experimental challenges).</li>
+        <li>Presented at NYUAD Summer Symposium 2025; awarded 1st Place for Best Poster.</li>
+      </ul>
+      <div class="tags"><span>Python</span><span>PyQt6</span><span>QuPyt</span><span>DAQ</span></div>
     </article>
 
     <article class="card role">
@@ -365,10 +392,12 @@
         <div>
           <div class="k">Coursework</div>
           <ul class="bullets tight">
-            <li>Graduate Quantum Computation</li>
-            <li>Probabilistic Time Series Analysis</li>
-            <li>Computer Organization &amp; Architecture</li>
-            <li>Quantum Programming</li>
+            <li>Probabilistic Time Series Analysis — Graduate Course</li>
+            <li>Computer Networking</li>
+            <li>Artifical Intelligence</li>
+            <li>Databases</li>
+            <li>Electronics</li>
+            <li>ECE Professional Development Course</li>
           </ul>
         </div>
         <div>
