Initial Commit of all Files

--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
           <span class="chip">TensorFlow</span>
           <span class="chip">Qiskit</span>
         </div>
+        <h3 class="subheading">Spoken</h3>
+        <div class="chips">
+          <span class="chip">English</span>
+          <span class="chip">Hindi</span>
+          <span class="chip">Malayalam</span>
+          <span class="chip">Arabic</span>
+        </div>
       </div>
       <div>
         <h3 class="subheading">Tools</h3>
@@ -171,22 +178,15 @@
 
         <h3 class="subheading">Fabrication & Measurement</h3>
         <div class="chips">
-          <span class="chip">Photolithography (lift-off / wet etch)</span>
-          <span class="chip">Thin-film Deposition (sputter: Al, Pt)</span>
-          <span class="chip">Film Metrology (step-height, microscopy)</span>
+          <span class="chip">Photolithography</span>
+          <span class="chip">Thin-film Deposition</span>
+          <span class="chip">Film Metrology</span>
           <span class="chip">Device Patterning (Hall bars, test wires)</span>
-          <span class="chip">Optical Setup & Alignment (beam/polarization)</span>
-          <span class="chip">Timing & Instrumentation (DAQ, pulse control)</span>
-          <span class="chip">Cryogenic Measurements (~4 K, 4-probe)</span>
-          <span class="chip">Data Analysis & Reporting (Python)</span>
-        </div>
-
-        <h3 class="subheading">Spoken</h3>
-        <div class="chips">
-          <span class="chip">English</span>
-          <span class="chip">Hindi</span>
-          <span class="chip">Malayalam</span>
-          <span class="chip">Arabic</span>
+          <span class="chip">Optical Setup & Alignment</span>
+          <span class="chip">Data Acquisition & Instrumentation</span>
+          <span class="chip">Timing, Triggering & Clock Synchronization</span>
+          <span class="chip">Cryogenic Measurements</span>
+          <span class="chip">Data Analysis & Reporting</span>
         </div>
       </div>
     </div>
