Initial Commit of all Files

--- a/index.html
+++ b/index.html
@@ -454,6 +454,14 @@
     <div class="grid two">
 
       <div class="card award">
+        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
+        <div class="meta">ICSC</div>
+        <ul class="bullets tight">
+          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
+        </ul>
+      </div>
+
+      <div class="card award">
         <h3>IBM Quantum Excellence <span class="pill">Award</span></h3>
         <div class="meta">IBM</div>
         <ul class="bullets tight">
