Update under Experience Section in index.html

--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
         <div class="role-sub">NYU Abu Dhabi • Abu Dhabi, UAE</div>
         <div class="role-dates">Jan 2025 – Present</div>
       </header>
-      <p>Led full-stack development of a PK/PD modeling platform for fitting, simulation, sharing, and reporting.</p>
-      <ul class="bullets tight">
+  <p><strong>🏅 Awarded Gold Medal and Best Integrated Human Practices (iGEM 2025):</strong> Recognized globally for impact in CDG-focused synthetic biology and integrating real-world feedback from patients, clinicians, and researchers to guide project design.</p>
+  <p>Led full-stack development of a PK/PD modeling platform for fitting, simulation, sharing, and reporting.</p>
+        <ul class="bullets tight">
         <li>React/FastAPI web app with 1-, 2-, and 3-compartment models; supports IV bolus/infusion, oral, and SC routes.</li>
         <li>Interactive dosing-regimen builder for repeats, custom multi-dose schedules, and infusion windows with live simulations.</li>
         <li>Per-subject fitting (SciPy) with KPIs (Cmax, Tmax, AUC), linear/semilog plots, VPCs, and auto-generated PDF reports.</li>
