Revise index.html for content updates and corrections
Updated various sections of the index.html file, including the meta description, role dates, coursework, and awards.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>Aman Sunesh | Computer Engineering @ NYU Abu Dhabi | GitHub & Projects</title>
 
-  <meta name="description" content="Aman Sunesh — Computer Engineering @ NYU Abu Dhabi. Projects in quantum sensing (NV centers), AI/ML, and full-stack scientific tools. GitHub: github.com/Aman-Sunesh">
+  <meta name="description" content="Aman Sunesh — Computer Engineering & Applied Math @ NYU Abu Dhabi ’27. Quantum sensing (NV centers), scientific ML, and full-stack research tools. GitHub: github.com/Aman-Sunesh">
 
   <meta name="theme-color" content="#6a11cb">
   <link rel="canonical" href="https://aman-sunesh.github.io/">
@@ -107,6 +107,7 @@
         <div class="stat"><span>82+</span><small>Public GitHub Projects</small></div>
         <div class="stat"><span>Developed</span><small>NYUAD’s First Quantum Sensing System</small></div>
         <div class="stat"><span>20+</span><small>End-to-End ML Pipelines</small></div>
+        <div class="stat"><span>1,000+</span><small>GitHub Contributions (2025)</small></div>
       </div>
     </div>
     <div class="hero-media">
@@ -199,7 +200,7 @@
       <header class="role-head">
         <h3>Research Assistant, Shabani Lab</h3>
         <div class="role-sub">New York University • New York, USA</div>
-        <div class="role-dates">Sep 2025 – Present</div>
+        <div class="role-dates">Sep 2025 – Dec 2025</div>
       </header>
       <ul class="bullets tight">
         <li>Pattern Al/Pt thin-film bilayers into Hall bars and 4-probe test wires using photolithography (wet etch or lift-off).</li>
@@ -213,7 +214,7 @@
       <header class="role-head">
         <h3>Software Lead, iGEM Dry Lab</h3>
         <div class="role-sub">NYU Abu Dhabi • Abu Dhabi, UAE</div>
-        <div class="role-dates">Jan 2025 – Present</div>
+        <div class="role-dates">Jan 2025 – Nov 2025</div>
       </header>
   <p><strong>🏅 Awarded Gold Medal and Best Integrated Human Practices (iGEM 2025):</strong> Recognized globally for impact in CDG-focused synthetic biology and integrating real-world feedback from patients, clinicians, and researchers to guide project design.</p>
   <p>Led full-stack development of a PK/PD modeling platform for fitting, simulation, sharing, and reporting.</p>
@@ -387,7 +388,7 @@
           NYU Tandon School of Engineering
         </h3>
         <div class="edu-sub">B.Sc. Computer Engineering (Study Away Semester)</div>
-        <div class="edu-dates">Aug 2025</div>
+        <div class="edu-dates">Aug 2025 – May 2026</div>
       </header>
       <div class="edu-grid">
         <div>
@@ -395,7 +396,7 @@
           <ul class="bullets tight">
             <li>Probabilistic Time Series Analysis — Graduate Course</li>
             <li>Computer Networking</li>
-            <li>Artifical Intelligence</li>
+            <li>Artificial Intelligence</li>
             <li>Databases</li>
             <li>Electronics</li>
             <li>ECE Professional Development Course</li>
@@ -453,14 +454,14 @@
     <h2 class="section-title">Certifications & Awards</h2>
 
     <div class="grid two">
-
       <div class="card award">
-        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
-        <div class="meta">ICSC</div>
+        <h3>Best Research Poster <span class="pill">1st Place</span></h3>
+        <div class="meta">NYUAD Summer Research Symposium 2025</div>
         <ul class="bullets tight">
-          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
+          <li>Project: Quantum Diamond Spectrometer (NV-center sensing) with nanosecond pulse control.</li>
         </ul>
       </div>
+    </div>
 
       <div class="card award">
         <h3>IBM Quantum Excellence <span class="pill">Award</span></h3>
@@ -487,6 +488,30 @@
           <li>Recognized for high performance in an international problem-solving competition.</li>
         </ul>
       </div>
+  
+      <div class="card award">
+        <h3>International Computer Science Competition (ICSC) 2025 <span class="pill">Milestone</span></h3>
+        <div class="meta">ICSC</div>
+        <ul class="bullets tight">
+          <li>Algorithmic Problem Solving (graphs, DP, combinatorics, optimization).</li>
+        </ul>
+      </div>
+
+      <div class="card award">
+        <h3>5-Day AI Agents Intensive Course with Google <span class="pill">Certification</span></h3>
+        <div class="meta">Kaggle • Issued Dec 2025</div>
+        <ul class="bullets tight">
+          <li>Training in agentic AI development and practical AI-agent workflows.</li>
+        </ul>
+      </div>
+
+      <div class="card award">
+        <h3>NYU Startup Bootcamp <span class="pill">Certification</span></h3>
+        <div class="meta">NYU Entrepreneurial Institute • Issued Oct 2025</div>
+        <ul class="bullets tight">
+          <li>Completed NYU venture-building bootcamp focused on startup fundamentals and execution.</li>
+        </ul>
+      </div>
 
       <div class="card award">
         <h3>IBM Courses <span class="pill">Certification</span></h3>
@@ -496,17 +521,7 @@
           <li>Intro to HTML, CSS &amp; JavaScript — web foundations and basic interactivity.</li>
         </ul>
       </div>
-
-      <div class="card award">
-        <h3>Best Research Poster <span class="pill">1st Place</span></h3>
-        <div class="meta">NYUAD Summer Research Symposium 2025</div>
-        <ul class="bullets tight">
-          <li>Project: Quantum Diamond Spectrometer (NV-center sensing) with nanosecond pulse control.</li>
-        </ul>
-      </div>
-    </div>
   </section>
-
   <section id="contact" class="container section">
     <h2 class="section-title">Contact</h2>
     <form class="contact" id="contact-form">
