--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <section class="hero container">
     <div class="hero-text">
       <h1><span class="visually-hidden">Aman Sunesh — </span>Designing intelligent systems — from quantum sensors to machine learning pipelines</h1>
-      <p>I'm a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of sensing systems and machine learning. My work spans NV-center quantum sensing platforms with nanosecond pulse control, <strong>MNAR time-series modeling of sensor blackouts</strong> (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps, and ML pipelines for imaging and vision. I care about reproducibility, hardware–software synergy, and results that ship.</p>
+      <p>I'm a Computer Engineering student at NYU Abu Dhabi building practical tools at the intersection of sensing systems and machine learning. My work spans NV-center quantum sensing platforms with nanosecond pulse control, MNAR time-series modeling of sensor blackouts (state-dependent missingness + Kalman/EM pipelines), full-stack pharmacokinetic simulation apps, and ML pipelines for imaging and vision. I care about reproducibility, hardware–software synergy, and results that ship.</p>
       <div class="cta">
         <a
           class="btn primary"
